--- a/.github/workflows/gcp_tf_destroy.yaml
+++ b/.github/workflows/gcp_tf_destroy.yaml
@@ -60,6 +60,6 @@ jobs:
         run: terraform init -backend-config="bucket=${{ env.tf_bucket_name }}"
 
       # Destroy all infra resources
-      - name: Terraform Apply
-        id: tf_apply
-        run: terraform apply --auto-approve
+      - name: Terraform Destroy
+        id: tf_destroy
+        run: terraform destroy --auto-approve
