chore: Update the manual workflow's name
Signed-off-by: Dimitris Kargatzis <dkargatzis@gmail.com>

--- a/.github/workflows/gcp_tf_destroy.yaml
+++ b/.github/workflows/gcp_tf_destroy.yaml
@@ -12,7 +12,7 @@
 #
 # Author: Dimitris G. Kargatzis (dimitris@warestack.io)
 #
-name: Terraform Destroy All
+name: Terraform Destroy All Infra Resources
 on:
   workflow_dispatch:
     inputs:
