feature: Adjust config script to output the post config info
Signed-off-by: Dimitris Kargatzis <dkargatzis@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Prevent uploading project config output
+gcp_project_configuration_info.json
